--- a/src/scss/_color.scss
+++ b/src/scss/_color.scss
@@ -1,17 +1,11 @@
 :root {
-  --primary-color: #{$primary-color};
-  --secondary-color: #{$secondary-color};
-  --dark-bg: #{$dark-bg};
-  --light-bg: #{$light-bg};
-  --text-dark: #{$text-dark};
-  --text-light: #{$text-light};
-  --border-color: #{$border-color};
-  --white: #{$white};
-  --background-color: #{$light-bg};
-  --text-color: #{$text-dark};
-}
-
-body.dark-mode {
-  --background-color: #{$dark-bg};
-  --text-color: #{$white};
+  --primary-color: #137fec;
+  --second-color: #aa8e12;
+  --background-color: #f6f7f8;
+  --header-color: #111827;
+  --text-color: #4b5563;
+  --border-color: #e5e7eb;
+  --gray-color-100: #f3f4f6;
+  --gay-color-500: #6b7280;
+  --white-color: #fff;
 }
